--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,18 @@
   <body>
     <h1>The chat</h1>
     <p>Welcome to the chat app</p>
+
+    <script src="/socket.io/socket.io.js" charset="utf-8"></script>
+    <script type="text/javascript">
+      var socket = io();
+
+      socket.on('connect', () => {
+        console.log('Connected to server');
+      });
+
+      socket.on('disconnect', () => {
+        console.log('Disonnected from server');
+      });
+    </script>
   </body>
 </html>
