--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,13 @@
     <h1>The chat</h1>
     <p>Welcome to the chat app</p>
 
-    <ol id="messages">
-      
-    </ol>
+    <ol id="messages"></ol>
 
     <form id="message-form">
       <input type="text" name="message" placeholder="Message"/>
       <button>Send</button>
     </form>
+    <button id="send-location">Send location</button>
 
     <script src="/socket.io/socket.io.js" charset="utf-8"></script>
     <script src="/js/libs/jquery-3.2.1.min.js" charset="utf-8"></script>
