--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <body class="chat">
 
     <div class="chat__sidebar">
-      <h3>People</h3>
+      <h3>Users online</h3>
       <div class="users"></div>
     </div>
 
@@ -28,6 +28,7 @@
 
     <script src="/socket.io/socket.io.js" charset="utf-8"></script>
     <script src="/js/libs/jquery-3.2.1.min.js" charset="utf-8"></script>
+    <script src="/js/libs/moment.js" charset="utf-8"></script>
     <script src="/js/index.js" charset="utf-8"></script>
   </body>
 </html>
