--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,11 @@
           <h3>Join a chat</h3>
         </div>
         <div class="form-field">
-          <label>Display name</label>
+          <label>User name</label>
           <input type="text" name="name" value="" autofocus>
         </div>
         <div class="form-field">
-          <label>Room name</label>
+          <label>Room</label>
           <input type="text" name="room" value="main">
         </div>
         <div class="form-field">
